<resources>
    <string name="app_name">EncryptionLoginSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome home</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_credentials">Remember credentials?</string>
</resources>