<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:importantForAccessibility="no"
            android:padding="20dp"
            android:src="@drawable/sticker_koala_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.01"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:textColorHint="#959faf"
                android:theme="@style/MyEditTextTheme2"
                app:boxBackgroundColor="#262a34"
                app:errorEnabled="true"
                app:errorTextColor="#FF5D5D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:startIconDrawable="@drawable/ic_at"
                app:startIconTint="#828ea0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfl_password"
                style="@style/TextAppTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="#959faf"
                android:theme="@style/MyEditTextTheme2"
                app:boxBackgroundColor="#262a34"
                app:endIconMode="password_toggle"
                app:endIconTint="#828ea0"
                app:errorEnabled="true"
                app:errorTextColor="#FF5D5D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tfl_email"
                app:startIconDrawable="@drawable/ic_lock_drawable"
                app:startIconTint="#828ea0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/swt_remember_credentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_credentials"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tfl_password"
                tools:layout_editor_absoluteX="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/TextAppTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:paddingVertical="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_state"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/swt_remember_credentials" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
